2008-11-04 Steve Bennett <steveb@workware.net.au>

	* jim.c: fix problems with "puts [list ${a}]". Resulted in syntax
	error.
	* jim.c: :: scoping for set
	* jim.c: Creating a C command when a Tcl command of the same name
	already exists can cause a crash.
	 

2008-11-03 Steve Bennett <steveb@workware.net.au>

	* jim.c: Allow env with no arguments to retrieve all environment variables
	as a list of name value ...
	* jim.c: Add format support for %o -- octal
	* jim.c: Allow direct access to variables in the global scope by
	prefixing with ::
	* jim.c: For compatibility with older versions of Tcl, allow == and != to
	compare strings if the arguments can't be interpreted as numbers
	* jim.c: Ensure that the string representation exists before doing
	string toupper or tolower
	 
2008-08-31 Duane Ellis

	* jim.c, jim.h: more text formatting fixes, improved error messages
	with location of error
	 
2008-08-25 Duane Ellis 

	* jim.c, jim.h: name value pair and formatting fixes
	
2008-07-23 Uwe Klein <uklein@klein-messgeraete.de>

	* fix missing vararg.h in some files ( included in jim.h )
	* in aio.socket return an error when hosti resolution fails
	   instead of just carrying on.

2008-07-23 oharboe

	* jim.c: reduce stack usage. Important for embedded devices without
	MMU.	
	* jim.c, jim-aio.c, jim-eventloop.c, jim-eventloop.h: emergency repairs
	to make code compile with eCos after event loops was added. event loop
	stuff compiles under eCos at least, but this was not tested for regressions. 

2008-07-21 oharboe

	* src/jim.c: very slightly improved error messages.
	* FreeBSD license cleanup wip

2008-07-13 Uwe Klein <uklein@klein-messgeraete.de>
	
	* doc/jim_man.txt : an overlook over jim command basics
	   and the added commands. incomplete, additions welcome.

2008-07-13 Uwe Klein <uklein@klein-messgeraete.de>

	* signals ( not complete , no eventscripts yet ) sleep and usleep
	   [pit] point in time and [jpit] julian point in time.
	