@@ -45,6 +45,29 @@ if {[catch {set thisvardoesnotexists}] == 0} {
 }
 puts "TEST 6 PASSED"
 
+# REGTEST 7
+# 04Nov2008 - variable parsing does not eat last brace
+set a 1
+list ${a}
+puts "TEST 7 PASSED"
+
+# REGTEST 8
+# 04Nov2008 - string toupper/tolower do not convert to string rep
+string tolower [list a]
+string toupper [list a]
+puts "TEST 8 PASSED"
+
+# REGTEST 9
+# 04Nov2008 - crash on exit when replacing Tcl proc with C command. Requires the aio extension
+proc aio.open {args} {}
+catch {package require aio}
+# Note, crash on exit, so don't say we passed!
+
+# REGTEST 10
+# 05Nov2008 - incorrect lazy expression evaluation with unary not
+expr {1 || !0}
+puts "TEST 10 PASSED"
+
 # TAKE THE FOLLOWING puts AS LAST LINE
 
 puts "--- ALL TESTS PASSED ---"
