@@ -1,3 +1,7 @@
+2008-11-05 Steve Bennett <steveb@workware.net.au>
+
+	* jim.c: fix lazy expression evaluation with unary not
+
 2008-11-04 Steve Bennett <steveb@workware.net.au>
 
 	* jim.c: fix problems with "puts [list ${a}]". Resulted in syntax
